--- a/src/seamlesscontrol.in
+++ b/src/seamlesscontrol.in
@@ -34,7 +34,10 @@ if __name__ == '__main__':
     import gi
 
     from gi.repository import Gio
-    resource = Gio.Resource.load(os.path.join(pkgdatadir, 'seamlesscontrol.gresource'))
+    if os.path.isfile('seamlesscontrol.gresource'):
+        resource = Gio.Resource.load('seamlesscontrol.gresource')
+    else:
+        resource = Gio.Resource.load(os.path.join(pkgdatadir, 'seamlesscontrol.gresource'))
     resource._register()
 
     from seamlesscontrol import main
